--- a/src/app/practice/practice.html
+++ b/src/app/practice/practice.html
@@ -1,7 +1,10 @@
 <div class="cards">
     <div class="header">Header</div>
-    <div class="content">
-        Content
+    <div 
+    class="content"
+    >
+         Content
+        <p>Card {{index}}</p>
     </div>
     <div class="footer">Footer</div>
 </div>
